# iriomote-mountaincat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
cli/: Cargo.toml
cli/src/: main.rs
iriomote_core/: Cargo.toml
iriomote_core/src/: lib.rs  predict.rs
iriomote_py/: Cargo.toml  pyproject.toml  test.py
iriomote_py/src/: ai.rs  lib.rs
