[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
iriomote_core = { version = "0.1.0", path = "../iriomote_core" }
tokio = { version = "1.37.0", features = ["full"] }
