[package]
name = "iriomote_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
flate2 = { version = "1.0.30" }
image = "0.25.1"
ndarray = "0.15.6"
ort = { git = "https://github.com/pykeio/ort.git", version = "2.0.0-rc.1" }
